--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 \include{chapter_estimators}
 \include{chapter_descriptive}
 \include{chapter_inference}
+\include{chapter_tests}
 
 \chapter{copied material}
 
@@ -1074,7 +1075,7 @@ distribution. The binomial distribution approaches the normal distribution
 particularly quickly such that (if the distribution is not highly skewed) you
 only need about 5 counts for the normal approximation to be pretty
 good.\footnote{The normal approximation to the binomial was proved long before
-the central limit theorem. This special case, called the \emph{de Moive-Laplace 
+the central limit theorem. This special case, called the \emph{de Moive-Laplace
 theorem}, was first published by de Moivre in 1738. Laplace published
 the reverse result, that the binomial approximates the normal, 75 years later,
 in 1812. The general central limit theorem was proven, more than 150 years
