--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{booktabs}
 \usepackage{color,soul} % for hl
 \usepackage{fullpage}
+\usepackage{xfrac} % for sfrac
 
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
