new preface, etc.

--- a/chapter_statistics.tex
+++ b/chapter_statistics.tex
@@ -1,6 +1,6 @@
 %!TEX root=main.tex
 
-\chapter{What is statistics?}
+\chapter{Just enough statistics theory}
 
 ``Statistics'' is confusing because it means two things. It's a plural noun that
 refers to multiple things, each of which is called a ``statistic''. It's also a
