--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
  \newcommand{\cov}[1]{\mathrm{Cov}\!\left[{#1}\right]}
  \newcommand{\defeq}{\stackrel{\text{def}}{=}}
 
-\title{Statistics for people who do numbers and science}
+\title{Statistical testing for scientists: principles of exact, approximate, and empirical tests}
 \author{Scott W. Olesen}
 
 \begin{document}
@@ -30,6 +30,8 @@
 \include{chapter_preface}
 
 \mainmatter
+
+\include{chapter_introduction}
 
 \include{chapter_statistics}
 
