--- a/chapter_preface.tex
+++ b/chapter_preface.tex
@@ -2,103 +2,36 @@
 
 \chapter{Preface}
 
-\section*{Who this book is for}
+As a graduate student and postdoc in the life sciences, I saw that many of my
+colleauges, had substantial quantitative training and experience. They were
+very able to hack together fairly sensible quantitative and statistical methods
+to answer their scientific questions. I found, however, that there was often a
+steep drop-off when it came time to apply statistical rigor to these hacky
+methods.
 
-As a graduate student and postdoc, I found that many graduate
-students and postdocs, especially in the life sciences, have a fair amount of quantitative
-training, often including statistics. They can hack together
-fairly sensible quantitative methods that answer their scientific questions. I
-found, however, that there was often a steep drop-off when it came time to apply
-statistical rigor to these hacky methods. This is my
-own story too.
+I think this gap between the ability to hack something together and the
+understanding to make something rigorous is partly born out of a gap in
+educational materials. There are plenty of introductory statistics
+textbooks that explain what a mean is, and there are plenty of statistical
+test cookbooks that well you what assumptions go into a $t$-test, and
+there are plenty of books and articles on statistics meants for people
+with a graduate-level education in statistics or math. There are few
+resources for people who are mature and shrewd quantitative thinkers but
+who don't have a half dozen statistics courses under their belt.
 
-This book is for people who are experienced quantitative and scientific
-thinkers, have decent algebra skills, and who want to learn
-about how to use statistical thinking to improve their scientific thinking.
-A rusty memory of college-level statistics might make it more interesting
-but is not required.
-
-\section*{Who this book is for}
-
-As I tried to fill gaps in my statistics knowedge, I found that books about
-statistics tended to come in two varities: utterly simplistic and
-overwhelmingly complex. It felt like trying to find books to read as an
-adult second-language leanrer.
-Grown-up books have interesting topics but overwhelming grammar and vocabulary,
-while children's books have accessible language but childish topics.
-
-I wanted this book to be interesting for scientific ``adults'' without having
-an overwhelming grammar or vocabulary. I introduce a lot of math in the first
-few sections, but it assumes very little mathematical training and focuses on
-the building blocks of the practical discussions later on. There are very few
-proofs.
-
-\section*{What this book is not}
+I think the situation is analogous to learning a foreign language as an
+adult. I find that it is easy to find books for children, which are at my
+level in terms of grammar and vocabulary but thematically boring, and
+there are books for adults, which are thematically interesting but way
+over my head. I wanted to write a book about statistical tests that was
+thematically \emph{and} ``gramatically'' appropriate.
 
 This is not a book for people who want to push the boundaries of what
-statisticians think are interesting mathematical problems.
+statisticians think are interesting mathematical problems. Nor is it
+a a cookbook that tells you what statistical test to run on your data.
+I want to give you the ability to reason about why to do a test and how to
+formulate one. Rather than telling you which steps to generate a $p$-value
+in a specific case, I show how $p$-values come about in general and how to
+derive them for specific cases.
 
-This is not a cookbook that tells you what statistical test to run on your
-data. I want to give you the ability to reason about why to do a test and
-how to formulate one. Rather than telling you which steps to generate a
-$p$-value in a specific case, I show how $p$-values come about in general and
-how to derive them for specific cases.
-
-I did not fill this book with scientific examples because I find that it's
-very easy to think that your particular scientific question is very
-interesting, and that the statistics that motivate are interesting, but that
-someone else's scientific questions or statistical problems are entirely
-uninteresting. I tried to keep it general so you can imagine you are the hero of the story.
-
-\section*{What you should be able to do after reading this book}
-
-I want you to be able to articulate you own statistical tests, modify
-and critique existing methodologies, and develop a healthy skepticism of the
-idea of statistical inference in general.
-
-\section*{What else should I read}
-
-My principal sources of motivation for this book were Allen Downey's
-\textit{Think Stats} and \textit{Think Bayes}. Stephen Stigler's
-\textit{History of Statistics} helped me understand many of the unspoken
-assumptions present in contemporary statistical thinking. Miran Lipva\v{c}a's
-\textit{Learn You a Haskell for Great Good} helped me clarify the language
-around the mathematical objects that come up. The first four chapters of
-\textit{Probability and Random Processes} by Grimmett and Stirzaker are an
-outstanding introduction to probability.
-
-\section*{Notes on notation}
-
-Notation is important, especially in probability and statistics, where related
-but crucially different things can be represented by similar pieces of
-notation. I present each piece of notation as it arises, but I put them here
-also for reference (Table~\ref{tab:notation}).
-
-\begin{table}
-\centering
-\begin{tabular}{ll}
-\toprule
-Type of object & Notation \\
-\midrule
-function that maps $A$ to $B$ & $f : A \to B$ \\
-function of a number $x$ with parameters $\theta$ & $f(x; \theta)$ \\
-function of non-number thing $X$ & $f[X]$ \\
-probability function & $\mathbb{P} : \Omega \to [0, 1]$ \\
-probability & $p \in [0, 1]$ \\
-discrete cumulative distribution function for random variable $X$ & $F_X : \mathbb{Z} \to [0, 1]$ \\
-continuous cumulative distribution function for random variable $X$ & $F_X : \mathbb{R} \to [0, 1]$ \\
-probability mass function for random variable $X$ & $f_X : \mathbb{Z} \to [0, 1]$ \\
-probability distribution function for random variable $X$ & $f_X : \mathbb{R} \to [0, 1]$ \\
-random variable $X$ is distributed like $Y$ & $X \sim Y$ \\
-estimator of statistic $X$ & $\hat{X}$ \\
-variance of a random variable $X$ & $\mathbb{V}[X]$, $\sigma_{X}^2$ \\
-expected value of a random variable $X$ & $\mathbb{E}[X]$, $\mu_X$ \\
-estimator for mean of iid random variables $X_i$ & $\hat{\mathbb{E}}[X]$, $\hat{\mu}_X$, $\overline{X}$ \\
-estimator for variance of iid random variables $X_i$ & $\hat{\mathbb{V}}[X]$, $\hat{\sigma}_X^2$ \\
-observed mean of data & $\overline{x}$ \\
-observed variance of data & $s^2$ \\
-\bottomrule
-\end{tabular}
-\caption{Notation used in this book.}
-\label{tab:notation}
-\end{table}
+I hope you find it useful!
